force-app/main/default/objects/addendum__c/addendum__c.object-meta.xml
<CustomObject>
    <label>Appendix</label>
    <nameField>
        <label>Appendix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appendix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>