force-app/main/default/objects/addendum__c/fields/Commision_KB__c.field-meta.xml
<CustomField>
    <fullName>Commision_KB__c</fullName>
    <label>Commision (KB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>