force-app/main/default/objects/addendum__c/fields/Comodity_Name_in_Vietnamese_and_English__c.field-meta.xml
<CustomField>
    <fullName>Comodity_Name_in_Vietnamese_and_English__c</fullName>
    <label>Comodity Name in Vietnamese and English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>