force-app/main/default/objects/addendum__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appendix (Company Name)</relationshipLabel>
    <relationshipName>Appendix</relationshipName>
    <type>Lookup</type>
</CustomField>