force-app/main/default/objects/addendum__c/fields/Compensation_term__c.field-meta.xml
<CustomField>
    <fullName>Compensation_term__c</fullName>
    <label>Compensation term (not use)</label>
    <type>TextArea</type>
</CustomField>