force-app/main/default/objects/addendum__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Phu_Luc</relationshipName>
    <type>Lookup</type>
</CustomField>