force-app/main/default/objects/addendum__c/fields/Date_of_sending_SOA__c.field-meta.xml
<CustomField>
    <fullName>Date_of_sending_SOA__c</fullName>
    <label>Date of sending SOA</label>
    <type>Date</type>
</CustomField>