force-app/main/default/objects/addendum__c/fields/Late_Payment_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Penalty__c</fullName>
    <label>Late Payment Penalty</label>
    <type>TextArea</type>
</CustomField>