force-app/main/default/objects/addendum__c/fields/NDDPL__c.field-meta.xml
<CustomField>
    <fullName>NDDPL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Representative</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Company_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appendix (Legal Representative)</relationshipLabel>
    <relationshipName>Appendix</relationshipName>
    <type>Lookup</type>
</CustomField>