force-app/main/default/objects/addendum__c/fields/Period_of_appendix__c.field-meta.xml
<CustomField>
    <fullName>Period_of_appendix__c</fullName>
    <label>Period of appendix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>