force-app/main/default/objects/addendum__c/fields/PIC_of_Contractor__c.field-meta.xml
<CustomField>
    <fullName>PIC_of_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC of Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Phu_Luc</relationshipName>
    <type>Lookup</type>
</CustomField>