force-app/main/default/objects/addendum__c/fields/SOA_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>SOA_Issue_Date__c</fullName>
    <label>SOA Issue Date</label>
    <type>Date</type>
</CustomField>