force-app/main/default/objects/addendum__c/fields/Type_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Shipment__c</fullName>
    <label>Type of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipment_Term</valueSetName>
    </valueSet>
</CustomField>