force-app/main/default/objects/addendum__c/recordTypes/PL_DCBSTT.recordType-meta.xml
<RecordType>
    <fullName>PL_DCBSTT</fullName>
    <active>true</active>
    <label>PL điều chỉnh bổ sung thanh toán</label>
</RecordType>