force-app/main/default/objects/addendum__c/recordTypes/PL_GH.recordType-meta.xml
<RecordType>
    <fullName>PL_GH</fullName>
    <active>true</active>
    <label>PL Gia Hạn</label>
</RecordType>