force-app/main/default/objects/addendum__c/recordTypes/PL_TDK.recordType-meta.xml
<RecordType>
    <fullName>PL_TDK</fullName>
    <active>true</active>
    <label>PL thay đổi khác</label>
</RecordType>